# ttrpg_dsl

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  justfile
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json  push-state.json
crates/ttrpg_cli/: Cargo.toml
crates/ttrpg_cli/examples/: profile_pipeline.rs
crates/ttrpg_cli/src/: commands.rs  completer.rs  effects.rs  format.rs  highlighter.rs  lib.rs  main.rs  manifest.rs  repl.rs  runner.rs  source_resolve.rs  validator.rs
crates/ttrpg_cli/src/runner/: assert.rs  config.rs  groups.rs  help.rs  host.rs  inspect.rs  load.rs  mod.rs  mutation.rs  parse.rs  tests.rs  util.rs
crates/ttrpg_cli/src/snapshots/: ttrpg_cli__format__tests__entity_detail_with_defaults.snap  ttrpg_cli__format__tests__sig_action_with_params.snap  ttrpg_cli__format__tests__sig_action_with_receiver_groups.snap  ttrpg_cli__format__tests__sig_condition_extends.snap  ttrpg_cli__format__tests__sig_condition_no_params.snap  ttrpg_cli__format__tests__sig_condition_params_extends.snap  ttrpg_cli__format__tests__sig_condition_simple.snap  ttrpg_cli__format__tests__sig_condition_with_params.snap  ttrpg_cli__format__tests__sig_derive_basic.snap  ttrpg_cli__format__tests__sig_derive_with_conjunctive.snap  ttrpg_cli__format__tests__sig_derive_with_disjunctive.snap  ttrpg_cli__format__tests__sig_event_with_fields.snap  ttrpg_cli__format__tests__sig_event_without_fields.snap  ttrpg_cli__format__tests__sig_hook.snap  ttrpg_cli__format__tests__sig_hook_with_trigger.snap  ttrpg_cli__format__tests__sig_mechanic_with_tags.snap  ttrpg_cli__format__tests__sig_prompt.snap  ttrpg_cli__format__tests__sig_reaction.snap  ttrpg_cli__format__tests__sig_reaction_with_trigger.snap  ttrpg_cli__format__tests__type_entity_with_groups.snap  ttrpg_cli__format__tests__type_enum_basic.snap  ttrpg_cli__format__tests__type_enum_ordered.snap  ttrpg_cli__format__tests__type_struct_braces.snap  ttrpg_cli__format__tests__type_unit_suffix.snap
crates/ttrpg_cli/tests/: coverage_integration.rs  invocation_examples.rs  osric_coverage.rs  snapshot_format.rs
crates/ttrpg_cli/tests/snapshots/: snapshot_format__format_dice_negative_modifier.snap  snapshot_format__format_dice_simple.snap  snapshot_format__format_dice_with_filter.snap  snapshot_format__format_empty_list.snap  snapshot_format__format_entity.snap  snapshot_format__format_enum_variant_no_fields.snap  snapshot_format__format_enum_variant_with_fields.snap  snapshot_format__format_list.snap  snapshot_format__format_map.snap  snapshot_format__format_primitives.snap  snapshot_format__format_roll_result.snap  snapshot_format__format_set.snap  snapshot_format__format_string_escaping.snap  snapshot_format__format_struct.snap  snapshot_format__format_unit_in_list.snap  snapshot_format__format_unit_with_suffix.snap  snapshot_format__format_unit_without_suffix_falls_back.snap
crates/ttrpg_interp/: Cargo.toml
crates/ttrpg_interp/benches/: pipeline.rs
crates/ttrpg_interp/src/: action.rs  adapter.rs  builtins.rs  call.rs  coverage.rs  effect.rs  eval.rs  event.rs  execution.rs  expr_eval.rs  handle_registry.rs  lib.rs  pipeline.rs  reference_state.rs  runtime_core.rs  state.rs  value.rs
crates/ttrpg_interp/src/call/: actions.rs  args.rs  collection_builtins.rs  dispatch.rs  functions.rs  methods.rs  mod.rs  ordinals.rs  tests.rs  variants.rs
crates/ttrpg_interp/src/eval/: access.rs  assign.rs  compare.rs  control.rs  dispatch.rs  emit.rs  helpers.rs  mod.rs  ops.rs  tests.rs
crates/ttrpg_interp/src/execution/: advance_action_lifecycle.rs  advance_block.rs  advance_condition.rs  advance_cost.rs  advance_derive.rs  advance_emit.rs  advance_host.rs  helpers.rs  mod.rs  tests.rs  walker.rs
crates/ttrpg_interp/tests/: action_default_ordering.rs  action_method_syntax.rs  active_condition_narrowing.rs  any_type.rs  collection_builtins.rs  condition_state_fields.rs  conditions_modify_audit.rs  const_integration.rs  cross_system_variant_resolution.rs  emit_integration.rs  entity_construction_integration.rs  enum_introspection.rs  enum_variant_defaults.rs  for_loop.rs  full_5e_integration.rs  function_blocks.rs  game_time.rs  hook_integration.rs  invocation_tracking.rs  lifecycle_hooks.rs  method_call_syntax.rs  modify_applied_event.rs  option_pattern.rs  optional_groups_integration.rs  ose_ability_integration.rs  ose_chargen_integration.rs  ose_class_integration.rs  ose_combat_integration.rs  ose_core_integration.rs  ose_equipment_integration.rs  ose_exploration_integration.rs  ose_magic_integration.rs  ose_saves_integration.rs  ose_spells_integration.rs  ose_thief_integration.rs  ose_time_economy_integration.rs  ose_wilderness_integration.rs  osric_ability_integration.rs  osric_afflictions_integration.rs  osric_bestiary_integration.rs  (+42 more)
crates/ttrpg_interp/tests/osric_common/: mod.rs
crates/ttrpg_interp/tests/snapshots/: snapshot_output__derive_returns_enum_variant.snap  snapshot_output__derive_returns_int.snap  snapshot_output__derive_returns_list.snap  snapshot_output__derive_returns_map.snap  snapshot_output__derive_returns_struct.snap  snapshot_output__negative.snap  snapshot_output__positive.snap  snapshot_output__runtime_error_undefined_derive.snap  snapshot_output__runtime_error_wrong_arg_count.snap  snapshot_output__zero.snap
crates/ttrpg_roguelike/: Cargo.toml  roguelike.ron  roguelike.ttrpg  ttrpg.toml
crates/ttrpg_roguelike/src/: config.rs  main.rs  map.rs  state.rs  ui.rs
design/: cli.md  interpreter.md  interpreter_checklist.md  interpreter_impl_plan.md  parser.md
doc/: ai_authoring.md  effect_protocol.md  few_shot_examples.ttrpg  integration_layers.md  (+8 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_checker.rs  fuzz_checker_ast.rs  fuzz_differential.rs  fuzz_full_pipeline.rs  fuzz_interp_ast.rs  fuzz_lexer.rs  fuzz_parser.rs
fuzz/seed_corpus/: all_keywords.ttrpg  dice_expr.ttrpg  minimal_system.ttrpg  nested_expr.ttrpg
(+245 files in other folders)
