[package]
name = "ttrpg_cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "ttrpg_cli"
path = "src/lib.rs"

[[bin]]
name = "ttrpg"
path = "src/main.rs"

[dependencies]
ttrpg_ast.workspace = true
ttrpg_lexer.workspace = true
ttrpg_parser.workspace = true
ttrpg_checker.workspace = true
ttrpg_interp.workspace = true
glob.workspace = true
nu-ansi-term.workspace = true
rand.workspace = true
reedline.workspace = true
